tests/snapshots/tui_theme__theme_highlight_focus_middle.snap
---
source: tests/tui_theme.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                       │Hunk gro",
        "aaa1       Add config and parser                                       │██      ",
        "bbb2       Refactor parser                                             ││█      ",
        "ccc3       Fix config, parser, unique                                  │███     ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        " bbb2 2/3                                                     Press 'h' for help",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 71, y: 0, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 1, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 1, fg: White, bg: Reset, underline: Reset, modifier: DIM,
        x: 73, y: 1, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 2, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Red, bg: Rgb(60, 60, 80), underline: Reset, modifier: DIM,
        x: 73, y: 2, fg: Green, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 74, y: 2, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: White, bg: Reset, underline: Reset, modifier: DIM,
        x: 73, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 3, fg: White, bg: Reset, underline: Reset, modifier: DIM,
        x: 75, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 62, y: 9, fg: White, bg: Blue, underline: Reset, modifier: DIM,
    ]
}
